# uidaho-cs472-project4

./: .gitignore  Makefile.am  README.org  configure  configure.ac  plot-fitness  plot-function  plot.plg  plot_fitness  plot_function  search.cfg
example/: individual.cpp  individual.hpp  node.cpp  node.hpp  test.cpp
results_2/: search.cfg
src/: Makefile.am  main.cpp
src/algorithm/: algorithm.cpp  algorithm.hpp
src/individual/: individual.cpp  individual.hpp
src/logging/: logging.cpp  logging.hpp
src/options/: options.cpp  options.hpp
src/problem/: problem.cpp  problem.hpp
src/random/: random_generator.hpp
src/random_generator/: random_generator.cpp  random_generator.hpp
src/trials/: trials.cpp  trials.hpp
tools/: plot-ratio  plot-results
write-up/: write-up.bib  write-up.tex
